tests/macros/unknown/async-unknown.rs
fn main() {
    let q = inquisition::questions![input { async unknown: 0 }];
}
